<resources>
    <string name="app_name">LMDB</string>
    <string name="mainTitle">Local Movie Database</string>
    <string name="library">Library</string>
    <string name="myLibrary">My Library</string>
    <string name="movie_title_search_hint">Movie title</string>
    <string name="search_movies_online">Search Movies Online</string>
    <string name="test_db">Test DB</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="url">URL:</string>
    <string name="show">Show</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="add_online">Add from online</string>
    <string name="exit">Exit</string>
    <string name="delete_all">Delete all</string>
    <string name="favorites">Favorites</string>

    <string name="delete_all_warning">Are you sure you want to delete ALL movies?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_alert_title">Action alert</string>
    <string name="action_alert">Choose an option for:\n</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">Are you sure you want to delete?</string>
    <string name="clean_searches">Clean searches</string>
    <string name="delete_all_searches_warning">Are you sure you want to delete ALL searches?</string>

</resources>
