<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >


    <item
        android:id="@+id/menuItemFavorites"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add"
        app:showAsAction="always" >

        <menu>
            <item
                android:id="@+id/menuItemAdd"
                android:title="@string/add" />

            <item
                android:id="@+id/menuItemAddApi"
                android:title="@string/add_online" />
        </menu>

    </item>

    <group
        android:id="@+id/groupOptions">

        <item
            android:id="@+id/menuItemExit"
            android:title="@string/exit" />

        <item
            android:id="@+id/menuItemDeleteAll"
            android:title="@string/delete_all" />

    </group>



</menu>